simplify setup instructions